# modular-shortcut-engine

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  pyrightconfig.json
docs/: adapter-layer.md  architecture.md  concurrency-model.md  design-decisions.md  gesture-model.md  performance.md  policy-engine.md
examples/: example_1.py  example_2.py  exit.py  logger_setup.py  pause.py
src/gestura/: __init__.py  demo.py
src/gestura/adapters/: __init__.py  protocols.py
src/gestura/adapters/pynput_adapters/: __init__.py  keyboard_listener.py  mouse_listener.py
src/gestura/config/: __init__.py  models.py  parser.py
src/gestura/engine/: engine.py  worker.py
src/gestura/input/: event_buffer.py
src/gestura/input/keyboard/: handler.py  pipeline.py
src/gestura/input/mouse/: handler.py  pipeline.py
src/gestura/integration/: __init__.py  action_bus.py  action_dispatcher.py  models.py
src/gestura/models/: combine.py  event.py  inputs.py  keyboard.py  mouse.py  policy.py
src/gestura/policy/: engine.py
src/gestura/utils/: define_shortcut.py  key_normalizer.py
tests/: test_KeyboardGesturePipeline.py  test_MouseGesturePipeline.py  test_eventbuffer.py  test_key_utils.py  test_loader.py  test_models.py
