[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestura"
version = "2.0.0"
description = "A deterministic, rate-controlled shortcut detection engine for keyboard and mouse events."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }

authors = [
    { name = "yashar-z-dev" }
]

keywords = [
    "gesture",
    "input-recognition",
    "human-input",
    "mouse-gesture",
    "keyboard-gesture",
    "event-engine",
    "policy-engine",
    "automation"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed"
]

dependencies = [
    "pynput>=1.7",
    "pydantic>=2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "pyright"
]

[project.urls]
Homepage = "https://github.com/yashar-z-dev/gestura"
Repository = "https://github.com/yashar-z-dev/gestura"
Issues = "https://github.com/yashar-z-dev/gestura/issues"
Documentation = "https://github.com/yashar-z-dev/gestura#readme"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gestura = ["py.typed"]

[project.scripts]
gestura-demo = "gestura.demo:main"
